# AM207_Final_Project_Fall_2020

./: .gitignore  LICENSE  README.md  am207_final_project_luna.ipynb  pyproject.toml
LUNA_proof_of_concept/: LUNA_architecture_check.py  LUNA_architecture_check_series1.py  LUNA_architecture_check_series2.py  LUNA_architecture_check_series3.py  LUNA_architecture_check_series5.py  LUNA_architecture_check_series6.py  LUNA_architecture_main.py  LUNA_architecture_parse.py  LUNA_architecture_plots.ipynb  LUNA_database_parse.py  LUNA_regression.py  LUNA_regression2.py  LUNA_test.py  NLM_regression.py
LUNA_proof_of_concept/trained_databases/: LUNA_trained_results_series1.sqlite  LUNA_trained_results_series2.sqlite  LUNA_trained_results_series3.sqlite  LUNA_trained_results_series4.sqlite  LUNA_trained_results_series5.sqlite  LUNA_trained_results_series6.sqlite  LUNA_trained_results_series7.sqlite
notebooks/: BNN_class.ipynb  LUNA_gap_experiment.ipynb  LUNA_grid_search_of_auxnum_and_diversification.ipynb  LUNA_multidim_input_demo.ipynb  comparison_of_methods.ipynb  demo_LUNA_1D.ipynb  demo_NLM.ipynb  demo_NLM_2D.ipynb  demo_ensemble.ipynb  experiment_LUNA_1D_10aux.ipynb  experiments_NLM.ipynb  final_pedagogical_example.ipynb
notebooks/.dev/: Experiment_NLM_1D_SYT_10000_steps.ipynb  Experiment_NLM_1D_SYT_2000_steps.ipynb  Experiment_NLM_1D_SYT_3000_steps.ipynb  Experiment_NLM_1D_SYT_5000_steps.ipynb  LUNA_multidim_input_demo-Copy1.ipynb  demo_GP.ipynb  demo_LUNA_1D.ipynb  demo_LUNA_1D_SYT.ipynb  demo_NLM.ipynb  problem_pedagogical_example.ipynb
src/: models.py  utils.py
(+9 files in other folders)
